layanan/assets/css/style-new-dentist.css
@-webkit-viewport {
  width: device-width;
}
section .page-title-container h1.page-title @-moz-viewport {
  width: device-width;
}
@-ms-viewport {
  width: device-width;
}
@-o-viewport {
  width: device-width;
}
@viewport {
  width: device-width;
}
@charset "UTF-8";
/**
CSS Reset
*/
@import url(https://fonts.googleapis.com/css?family=Raleway);

@font-face {
  font-family: "avenirblack";
  src: url("../fonts/avenir/Avenir-Black.ttf") format("truetype");
}
@font-face {
  font-family: "avenirheavy";
  src: url("../fonts/avenir/Avenir-Heavy.ttf") format("truetype");
}
@font-face {
  font-family: "avenir";
  src: url("../fonts/avenir/Avenir-Medium.ttf") format("truetype");
}
@font-face {
  font-family: "avenirlight";
  src: url("../fonts/avenir/Avenir-Light.ttf") format("truetype");
}
@font-face {
  font-family: "novecentomedium";
  src: url("../fonts/novecento/Novecentosanswide-Medium.otf") format("truetype");
}
@font-face {
  font-family: "novecentolight";
  src: url("../fonts/novecento/Novecentosanswide-Light.otf") format("truetype");
}

@font-face {
  font-family: "poppins";
  src: url("../fonts/Poppins/Poppins-Regular.ttf") format("truetype");
  font-weight: normal;
}

@font-face {
  font-family: "poppins";
  src: url("../fonts/Poppins/Poppins-Light.ttf") format("truetype");
  font-weight: lighter;
}

@font-face {
  font-family: "poppins";
  src: url("../fonts/Poppins/Poppins-Bold.ttf") format("truetype");
  font-weight: bold;
}

@font-face {
  font-family: "poppins";
  src: url("../fonts/Poppins/Poppins-SemiBold.ttf") format("truetype");
  font-weight: 600;
}

@font-face {
  font-family: "dmserif";
  src: url("../fonts/DM_Serif_Display/DMSerifDisplay-Regular.ttf")
    format("truetype");
}

@font-face {
  font-family: "dmserif";
  src: url("../fonts/DM_Serif_Display/DMSerifDisplay-Italic.ttf")
    format("truetype");
  font-style: italic;
}

* {
  font-family: "Raleway", "sans-serif";
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  /* overflow-x: hidden; */
  scroll-behavior: smooth;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  line-height: 1.7;
}

body {
  font-size: 15px;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
ol,
ul {
  list-style: none;
}
a:hover {
  text-decoration: none;
}
dfn,
em {
  font-style: italic !important;
}
strong {
  font-weight: 700 !important;
}
.no-gap [class*="-1"],
.no-gap [class*="-6"],
.no-gap [class*="-8"],
.no-gap [class*="-3"],
.no-gap [class*="-5"],
.no-gap [class*="-9"],
.no-gap [class*="-2"],
.no-gap [class*="-10"],
.no-gap [class*="-4"],
.no-gap [class*="-12"] {
  padding-left: 0;
  padding-right: 0;
}

p:last-child {
  margin-bottom: 0;
}
h1,
h2,
h3,
h4 {
  font-weight: bold;
  margin-bottom: 15px;
}
img.pright {
  float: right;
  margin: 0 0 30px 30px;
}

header.head-banner {
  background: url(../img/img-new-dentist/bg-top.png) no-repeat;
  background-size: cover;
  height: 485px;
  width: 100%;
  display: block;
  position: relative;
}
header.head-banner .drg {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 510px;
}

.header-box {
  z-index: 10;
  margin-left: 50px;
}

/* NAVIGATION */
.logique-nav {
  width: 95px;
  background: rgba(255, 202, 19, 0.9);
  height: 100%;
  position: fixed;
  top: 0;
  z-index: 1000;
  perspective: 1000px;
  padding: 0;
  font-weight: 300;
  transition: all 0.25s;
  overflow: auto;
}
.logique-nav .text-center {
  padding: 5px 10px;
  line-height: normal;
}
.logique-nav .text-center.active,
.logique-nav .text-center.active:focus,
.logique-nav .text-center.active:hover {
  background: #212425;
}
.logique-nav .text-center:focus,
.logique-nav .text-center:hover {
  background: #666;
}

.logique-nav .text-center:focus a,
.logique-nav .text-center:hover a {
  color: #fff;
}
.logique-nav a {
  color: #000;
  text-decoration: none !important;
  font-size: 12px;
}
.logique-nav .text-center.active a,
.logique-nav .text-center.active:focus a,
.logique-nav .text-center.active:hover a {
  color: #fff;
}
.margin-for-nav {
  margin-top: 0;
}
@media (min-width: 1200px) {
  .margin-for-nav {
    top: 50%;
    transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    position: relative;
  }
}
.logique-nav.in-jp a {
  font-size: 12px;
}
@media screen and (max-width: 979px) {
  .logique-nav {
    background: rgba(255, 202, 19, 1);
  }
}
@media (max-width: 767px) {
  .logique-nav {
    margin-right: -150px;
    margin-left: auto;
    position: relative;
  }
  .collapse.in .logique-nav {
    margin-right: 0;
    padding-top: 0;
  }
}
.img-about,
.img-blog,
.img-career,
.img-contact,
.img-home,
.img-portfolio,
.img-services,
.img-product {
  height: 44px;
  width: 44px;
}
.img-home {
  margin: auto;
  background: url(/img/nav-img.png) -2px -4px no-repeat;
}
.logique-nav .text-center.active .img-home,
.logique-nav .text-center.active:focus .img-home,
.logique-nav .text-center.active:hover .img-home,
.logique-nav .text-center:focus .img-home,
.logique-nav .text-center:hover .img-home {
  background: url(/img/nav-img-white.png) -2px -4px no-repeat;
}
.img-about {
  margin: auto;
  background: url(/img/nav-img.png) -2px -62px no-repeat;
}
/* ... */

